# xbenchmark

./: CMakeLists.txt  README.md  launch.sh
include/: CMakeLists.txt
include/find/: binary.hpp  binary_equal.hpp  binary_gt.hpp  linear.hpp  linear_equal.hpp  linear_gt.hpp  utils.hpp
include/utils/: custom_arguments.hpp
src/: CMakeLists.txt  complex.cpp  find.cpp  fma.cpp  launch.sh  main.cpp  vector.cpp  view.cpp  view_all.cpp
src/allocation/: CMakeLists.txt  allocation.cpp  allocation.md  loic.cpp
src/blas1/: .vector.cpp.swp  CMakeLists.txt  add_scalar.cpp  complex.cpp  fma.cpp  logic.cpp  test_old.cpp  vector.cpp  vector.md
src/find/: CMakeLists.txt  find.cpp  find.md  find_equal.cpp  find_gt.cpp
src/insert/: .insert.cpp.swp  CMakeLists.txt  insert.cpp
src/op/: CMakeLists.txt  op.cpp
src/utils/: custom_arguments.cpp
src/view/: CMakeLists.txt  view_all.cpp  view_all.md  view_stride.cpp
